more prep for multi use alignmentdetails propagage mouse moves and viewport moves bugfix: css scroll classes repeated for safari block rectangles and letters hook -> component

--- a/src/components/alignment-details/AlignmentDetails.scss
+++ b/src/components/alignment-details/AlignmentDetails.scss
@@ -9,8 +9,12 @@
   left: 0;
   right: 0;
 
+  canvas.stage.interaction-viewport {
+    pointer-events: none;
+  }
+
   canvas.stage {
-    position: relative;
+    position: absolute;
     image-rendering: optimizeSpeed;
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
